--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,14 @@
 .DS_Store
 node_modules/
 dist/
-CONTRIBUTING.md
-npm-debug.log
-yarn-debug.log*
-yarn-error.log*
-yarn.lock
 package-lock.json
 test/unit/coverage
 test/e2e/reports
-selenium-debug.log
 
-# Editor directories and files
-.idea
-.vscode
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
+# vitepress build output
+docs/.vitepress/cache
+.vitepress/cache
 
-play/
-.vitepress/
+# vscode
+.vscode/*
+!.vscode/settings.json
